# llvm-project

mlir/examples/: CMakeLists.txt
mlir/examples/block/: CMakeLists.txt  blockc.cpp
mlir/examples/block/include/: CMakeLists.txt
mlir/examples/block/include/block/: AST.h  CMakeLists.txt  Dialect.h  Lexer.h  MLIRGen.h  Ops.td  Parser.h
mlir/examples/block/mlir/: Dialect.cpp  MLIRGen.cpp
mlir/examples/block/parser/: AST.cpp  BitsParser.cpp  BoolParser.cpp  CommonParser.cpp
mlir/test/Examples/Block/: ast.bl  ast.block  clk.bl  test.bl
